# FacialSimilarity

./: .gitignore  Doxyfile  README.md
examples/: README  ctx1
experiments/: appendStudy2.csv
processedFaces/s01/: 03.pgm  04.pgm  05.pgm  07.pgm  09.pgm
processedFaces/s02/: 01.pgm  03.pgm  05.pgm  09.pgm  10.pgm
processedFaces/s03/: 01.pgm  04.pgm  06.pgm  07.pgm  09.pgm
processedFaces/s04/: 01.pgm  02.pgm  03.pgm  05.pgm  06.pgm  09.pgm
processedFaces/s05/: 04.pgm  05.pgm  06.pgm  07.pgm  08.pgm
processedFaces/s06/: 01.pgm  02.pgm  03.pgm  05.pgm  07.pgm  09.pgm  10.pgm
processedFaces/s07/: 01.pgm  02.pgm  08.pgm  09.pgm
processedFaces/s08/: 01.pgm  02.pgm  (+3 more)
proj1/: .gitignore  Makefile  README.md  argsParsing.cpp  argsParsing.h  argsParsingFCM.cpp  argsParsingGEN.cpp  bible_v1_entropy.txt  fcm.cpp  generateGraphData.sh  generator.cpp  graphConstruction.m  graphInput.txt  model.cpp  model.h  test.sh  test.txt  text.txt
proj2/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  createCodeBooks.sh  evaluateCodebooks.sh  filesQuant.sh  histogram.txt  testCentroidsNumber.sh
proj2/bin-example/: wavcp  wavhist
proj2/codebook/: sample  sample01  sample02  sample03  sample04  sample05  sample06  sample07
proj2/codebooksBlockSizeStudy/size_100/: sample01_8_1  sample02_8_1  sample03_8_1
proj2/codebooksBlockSizeStudy/size_400/: sample01_8_1  sample02_8_1  sample03_8_1  sample04_8_1  sample05_8_1  sample06_8_1  sample07_8_1
proj2/codebooksBlockSizeStudy/size_800/: sample01_8_1  sample02_8_1  sample03_8_1  sample05_8_1  sample06_8_1
proj2/codebooksOverlappingStudy/overlap_000/: sample01_8_1  sample02_8_1  sample03_8_1  sample04_8_1  sample05_8_1  sample06_8_1  sample07_8_1
proj2/codebooksOverlappingStudy/overlap_010/: sample04_8_1  sample07_8_1
proj2/codebooksOverlappingStudy/overlap_025/: sample01_8_1  sample02_8_1  sample03_8_1  sample04_8_1  sample05_8_1  sample06_8_1  sample07_8_1
proj2/codebooksOverlappingStudy/overlap_050/: sample01_8_1  sample02_8_1  sample03_8_1  sample04_8_1  sample05_8_1  sample06_8_1  sample07_8_1
proj2/codebooksOverlappingStudy/overlap_075/: sample01_8_1  sample02_8_1  sample03_8_1  sample04_8_1  sample05_8_1  sample06_8_1  sample07_8_1
proj2/report/: report.tex  threading.drawio
proj2/src/: io.cpp  snr.cpp  vctQuant.cpp  wavcb.cpp  wavcmp.cpp  wavcp.cpp  wavfind.cpp  wavhist.cpp  wavhist.h  wavquant.cpp
proj2/src-example/: wavhist.cpp  wavhist.h
proj2/src/headers/: io.h  snr.h  vctQuant.h  wavhist.h
proj3/: README.md  averageStudy  averageStudy.csv  checkCompressors.sh  compressors.sh  mergers.sh  preprocessImages.sh  testCompressor.sh
proj3/src_nccd/: CMakeLists.txt  Makefile  alphabet.cpp  ctx.cpp
src/: preprocessImages.sh
src_nccd/: README.FIRST  fcm.cpp  fcm.h
(+594 files in other folders)
